--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dist/"
   ],
   "scripts": {
-    "prepare": "npm run test && npm run build",
+    "prepublishOnly": "npm run test && npm run lint",
+    "prepare": "npm run build",
     "test": "jest",
     "build": "tsc",
     "lint": "eslint ./src --ext .ts"
