--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,9 @@
 on:
-    release:
-        types:
-            - published
+    push:
+        tags:
+            - v*
 
-name: Publish Package
+name: Publish Artifact & Release
 jobs:
     build:
         name: Build and Publish Package
@@ -28,6 +28,7 @@ jobs:
                     registry-url: 'https://registry.npmjs.org'
             -   name: Install dependencies
                 run: npm ci
+
             -   run: npm publish --access public
                 env:
                     NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
@@ -43,3 +44,17 @@ jobs:
                 run: npm publish
                 env:
                     NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    gh_release:
+        needs: build
+        runs-on: ubuntu-latest
+        name: Publish GitHub Release
+        steps:
+            -   id: publish_gh_release
+                uses: actions/create-release@v1
+                env:
+                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                with:
+                    tag_name: ${{ github.ref }}
+                    release_name: Release ${{ github.ref }}
+                    body: "" # TODO: cut section matching tag from changelog.md
