Add `if` condition for release-pr workflow steps.
Required until GitHub supports branch filters for `create` event: https://github.community/t/trigger-job-on-branch-created/16878/5

--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -10,13 +10,18 @@ jobs:
         name: Create Release Pull Request
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
+            # All `if` statements are necessary until GitHub supports branch filters for `create` events
+            - if: ${{ contains(github.ref, 'refs/heads/release/v') }}
+              uses: actions/checkout@v2
+
 
             - name: Parse release version
+              if: ${{ contains(github.ref, 'refs/heads/release/v') }}
               id: get_version
               run: echo "::set-output name=version::$(echo $GITHUB_REF | sed 's|^refs/heads/release/v?*||g')"
 
             - name: Prepare Pull Request
+              if: ${{ contains(github.ref, 'refs/heads/release/v') }}
               id: prep_pr
               run: |
                   CHANGELOG_PATH=$(printf "%s/CHANGELOG.md" "${GITHUB_WORKSPACE}")
@@ -42,6 +47,7 @@ jobs:
 
 
             - name: Create Pull Request via API
+              if: ${{ contains(github.ref, 'refs/heads/release/v') }}
               id: post_pr
               uses: octokit/request-action@v2.x
               with:
