--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@1password/connect-sdk",
+  "name": "@1password/connect",
   "version": "0.0.3",
   "homepage": "https://1password.com/secrets/",
   "repository": "https://github.com/1Password/connect-sdk-js",
