--- a/.github/ISSUE_TEMPLATES/bug_report.yml
+++ b/.github/ISSUE_TEMPLATES/bug_report.yml
@@ -18,7 +18,7 @@ https://1password.com/integrations/active
 -->
 Connect Server Version:
 
-<!-- What OS was the Ansible collection running on? -->
+<!-- What OS was the SDK running on? -->
 OS:
 
 <!-- What version of Node and TypeScript were you running when the error occurred? -->
