--- a/package.json
+++ b/package.json
@@ -1,49 +1,52 @@
 {
-  "name": "@1password/connect",
-  "version": "1.0.0",
-  "homepage": "https://1password.com/secrets/",
-  "repository": "https://github.com/1Password/connect-sdk-js",
-  "description": "JavaScript/Typescript SDK for 1Password Connect",
-  "main": "dist/index.js",
-  "files": [
-    "dist/"
-  ],
-  "scripts": {
-    "prepublishOnly": "npm run test && npm run lint",
-    "prepare": "npm run build",
-    "test": "jest",
-    "build": "tsc",
-    "lint": "eslint ./src --ext .ts"
-  },
-  "author": "1Password",
-  "license": "MIT",
-  "prettier": "@1password/front-end-style/prettierrc.json",
-  "devDependencies": {
-    "@1password/front-end-style": "^1.0.13",
-    "@types/debug": "^4.1.5",
-    "@types/jest": "^26.0.14",
-    "@types/lodash.clonedeep": "^4.5.6",
-    "@types/slug": "^0.9.1",
-    "@typescript-eslint/eslint-plugin": "^4.3.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^4.4.0",
-    "@typescript-eslint/parser": "^4.3.0",
-    "eslint": "^7.10.0",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsdoc": "^30.6.2",
-    "eslint-plugin-no-null": "^1.0.2",
-    "eslint-plugin-prefer-arrow": "^1.2.2",
-    "jest": "^26.6.3",
-    "nock": "^13.0.4",
-    "prettier": "^2.1.2",
-    "ts-jest": "^26.4.0",
-    "tslint-microsoft-contrib": "^6.2.0",
-    "typescript": "^4.0.3"
-  },
-  "dependencies": {
-    "axios": "0.21.1",
-    "debug": "^4.2.0",
-    "lodash.clonedeep": "^4.5.0",
-    "slug": "^3.3.4"
-  }
+    "name": "@1password/connect",
+    "version": "1.0.0",
+    "homepage": "https://1password.com/secrets/",
+    "repository": "https://github.com/1Password/connect-sdk-js",
+    "description": "JavaScript/Typescript SDK for 1Password Connect",
+    "main": "dist/index.js",
+    "files": [
+        "dist/"
+    ],
+
+    "scripts": {
+        "prepublishOnly": "npm run test && npm run lint",
+        "prepare": "npm run build",
+        "test": "jest",
+        "build": "tsc",
+        "lint": "eslint --ext .ts"
+    },
+    "author": "1Password",
+    "license": "MIT",
+    "prettier": "./prettierrc.json",
+    "devDependencies": {
+        "@types/debug": "^4.1.5",
+        "@types/jest": "^26.0.23",
+        "@types/lodash.clonedeep": "^4.5.6",
+        "@types/slug": "^0.9.1",
+        "@types/vfile-message": "1.0.1",
+        "@typescript-eslint/eslint-plugin": "^4.22.0",
+        "@typescript-eslint/parser": "^4.22.0",
+        "eslint": "^7.25.0",
+        "eslint-config-prettier": "^6.12.0",
+        "eslint-plugin-deprecation": "^1.1.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jsdoc": "^30.6.5",
+        "eslint-plugin-no-unsanitized": "^3.1.4",
+        "eslint-plugin-prefer-arrow": "^1.2.2",
+        "eslint-plugin-react": "^7.21.4",
+        "eslint-plugin-react-hooks": "^4.1.2",
+        "eslint-plugin-unicorn": "^22.0.0",
+        "jest": "^26.6.3",
+        "nock": "^13.0.4",
+        "prettier": "^2.1.2",
+        "ts-jest": "^26.5.6",
+        "typescript": "^4.0.3"
+    },
+    "dependencies": {
+        "axios": "0.21.1",
+        "debug": "^4.3.1",
+        "lodash.clonedeep": "^4.5.0",
+        "slug": "^4.1.0"
+    }
 }
