--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "prepare": "npm run build",
         "test": "jest",
         "test:coverage": "npx jest --coverage --colors",
+        "make-badges": "istanbul-badges-readme --coverageDir='./__test__/coverage'",
         "build": "tsc",
         "lint": "eslint --ext .ts"
     },
@@ -37,6 +38,7 @@
         "eslint-plugin-react": "^7.21.4",
         "eslint-plugin-react-hooks": "^4.1.2",
         "eslint-plugin-unicorn": "^22.0.0",
+        "istanbul-badges-readme": "^1.4.0",
         "jest": "^26.6.3",
         "nock": "^13.0.4",
         "prettier": "^2.1.2",
