Add coverage report in pipeline and trigger testing for all push commits
The testing pipeline would be triggered only when a PR was opened or reopened. Now the pipeline will be triggered for all push commits in a pull request.

--- a/.github/workflows/test-prs.yml
+++ b/.github/workflows/test-prs.yml
@@ -2,7 +2,7 @@ name: Pull Request QA
 
 on:
     pull_request:
-        types: [opened, reopened]
+        types: [opened, synchronize, reopened]
 
 jobs:
     lintAndTest:
@@ -23,4 +23,4 @@ jobs:
                   ${{ runner.os }}-node-
             - run: npm install
             - run: npm run lint
-            - run: npm test
+            - run: npm run test:coverage
