Improve pipeline workflows

--- a/.github/workflows/test-main.yml
+++ b/.github/workflows/test-main.yml
@@ -27,4 +27,4 @@ jobs:
             - name: Upload coverage to Codecov
               uses: codecov/codecov-action@v1
               with:
-                irectory: ./coverage/
+                directory: ./coverage/
