--- a/.github/workflows/test-prs.yml
+++ b/.github/workflows/test-prs.yml
@@ -5,7 +5,7 @@ on:
         types: [opened, synchronize, reopened]
 
 jobs:
-    lintAndTest:
+    lintAndTestWithCoverage:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
@@ -23,26 +23,7 @@ jobs:
                   ${{ runner.os }}-node-
             - run: npm install
             - run: npm run lint
-            - run: npm run test
-    addCoverage:
-        needs: lintAndTest
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v2
-            - name: Test with Node.js Latest LTS
-              uses: actions/setup-node@v1
-              with:
-                # Latest LTS version
-                node-version: '12.x'
-            - name: Cache NPM modules
-              uses: actions/cache@v2
-              with:
-                path: ~/.npm
-                key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-                restore-keys: |
-                  ${{ runner.os }}-node-
-            - name: Run tests
-              run: npm install && npm run test:coverage
+            - run: npm run test:coverage
             - name: Upload coverage to Codecov
               uses: codecov/codecov-action@v1
               with:
