--- a/.github/workflows/test-main.yml
+++ b/.github/workflows/test-main.yml
@@ -1,29 +1,29 @@
-name: Pull Request QA
+name: Code Coverage main
 
 on:
-    pull_request:
-        types: [opened, synchronize, reopened]
+    push:
+        branches:
+            - main
 
 jobs:
-    lintAndTestWithCoverage:
+    coverage:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
             - name: Test with Node.js Latest LTS
               uses: actions/setup-node@v1
               with:
-                  # Latest LTS version
-                  node-version: '12.x'
+                # Latest LTS version
+                node-version: '12.x'
             - name: Cache NPM modules
               uses: actions/cache@v2
               with:
                 path: ~/.npm
                 key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
                 restore-keys: |
-                  ${{ runner.os }}-node-
-            - run: npm install
-            - run: npm run lint
-            - run: npm run test:coverage
+                    ${{ runner.os }}-node-
+            - name: Run tests
+              run: npm install && npm run test:coverage
             - name: Upload coverage to Codecov
               uses: codecov/codecov-action@v1
               with:
