--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "prepublishOnly": "npm run test && npm run lint",
         "prepare": "npm run build",
         "test": "jest",
+        "test:coverage": "npx jest --ci --coverage",
         "build": "tsc",
         "lint": "eslint --ext .ts"
     },
@@ -26,6 +27,7 @@
         "@types/vfile-message": "1.0.1",
         "@typescript-eslint/eslint-plugin": "^4.22.0",
         "@typescript-eslint/parser": "^4.22.0",
+        "codecov": "^3.8.2",
         "eslint": "^7.25.0",
         "eslint-config-prettier": "^6.12.0",
         "eslint-plugin-deprecation": "^1.1.0",
