--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
         "typescript": "^4.0.3"
     },
     "dependencies": {
-        "axios": "0.21.1",
+        "axios": "^0.21.3",
         "debug": "^4.3.1",
         "lodash.clonedeep": "^4.5.0",
         "slug": "^4.1.0"
