--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
         "@types/debug": "^4.1.5",
         "@types/jest": "^26.0.23",
         "@types/lodash.clonedeep": "^4.5.6",
-        "@types/slug": "^0.9.1",
         "@types/vfile-message": "1.0.1",
         "@typescript-eslint/eslint-plugin": "^4.22.0",
         "@typescript-eslint/parser": "^4.22.0",
@@ -42,7 +41,8 @@
         "nock": "^13.0.4",
         "prettier": "^2.1.2",
         "ts-jest": "^26.5.6",
-        "typescript": "^4.0.3"
+        "typescript": "^4.0.3",
+        "slugify": "^1.6.5"
     },
     "dependencies": {
         "axios": "^0.21.3",
