--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "prettier": "^2.1.2",
         "ts-jest": "^26.5.6",
         "typescript": "^4.0.3",
+        "@vercel/ncc": "^0.31.1",
         "slugify": "^1.6.5"
     },
     "dependencies": {
