--- a/package.json
+++ b/package.json
@@ -48,6 +48,6 @@
         "axios": "^0.21.3",
         "debug": "^4.3.1",
         "lodash.clonedeep": "^4.5.0",
-        "slug": "^4.1.0"
+        "slugify": "^1.6.5"
     }
 }
