point ts compiler to test folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
     "esModuleInterop": true,
     "declaration": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "__test__/**/*"]
 }
