exclude __test__ to be added into dist after build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
     "esModuleInterop": true,
     "declaration": true
   },
-  "include": ["src/**/*", "__test__/**/*"]
+  "include": ["src/**/*"]
 }
