--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
         "nock": "^13.0.4",
         "prettier": "^2.1.2",
         "ts-jest": "^26.5.6",
-        "typescript": "^4.0.3",
-        "slugify": "^1.6.5"
+        "typescript": "^4.0.3"
     },
     "dependencies": {
         "axios": "^0.21.3",
         "debug": "^4.3.1",
         "lodash.clonedeep": "^4.5.0",
-        "slugify": "^1.6.5"
+        "slugify": "^1.6.5",
+        "uuid": "^8.3.2"
     }
 }
