--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,10 @@ name: Release SDK if needed
 
 on:
   pull_request:
-    branches: main
-    types: closed
+    branches:
+      - main
+    types:
+      - closed
 
 jobs:
   release:
@@ -11,13 +13,13 @@ jobs:
     if: github.event.pull_request.merged == true && contains(github.event.pull_request.head.ref, 'release/')
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - name: Setup Node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          node-version: '12.x'
+          node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
       - run: npm install
       - name: Publish to npm
