Improve workflow permissions
Since our project has been created before February 2023, we have the
more permissive permission `write-all` set for the `GITHUB_TOKEN` used
by the workflow. Therefore, to apply the principle of least privilege,
we now explicitly specify the permisisons needed for each workflow.

In addition, I've applied the same styling format for all current
workflows for consistency.

--- a/.github/workflows/test-main.yml
+++ b/.github/workflows/test-main.yml
@@ -1,30 +1,33 @@
 name: Code Coverage main
 
 on:
-    push:
-        branches:
-            - main
+  push:
+    branches:
+      - main
+
+permissions:
+  contents: read
 
 jobs:
-    coverage:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
-            - name: Test with Node.js Latest LTS
-              uses: actions/setup-node@v4
-              with:
-                # Latest LTS version
-                node-version: '20.x'
-            - name: Cache NPM modules
-              uses: actions/cache@v3
-              with:
-                path: ~/.npm
-                key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-                restore-keys: |
-                    ${{ runner.os }}-node-
-            - name: Run tests
-              run: npm install && npm run test:coverage
-            - name: Upload coverage to Codecov
-              uses: codecov/codecov-action@v3
-              with:
-                directory: ./coverage/
+  coverage:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Test with Node.js Latest LTS
+        uses: actions/setup-node@v4
+        with:
+          # Latest LTS version
+          node-version: "20.x"
+      - name: Cache NPM modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      - name: Run tests
+        run: npm install && npm run test:coverage
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          directory: ./coverage/
